--- a/src/main/resources/templates/community/review-board.html
+++ b/src/main/resources/templates/community/review-board.html
@@ -32,7 +32,7 @@
 
         <div class="header">
             <div class="header-container">
-                <a href="/community/free-board">
+                <a href="/community/free-board/new">
                     <span class="header-title2">자유</span>
                 </a>
                 <span class="header-title1">활동후기</span>
