--- a/src/main/resources/templates/community/free-create.html
+++ b/src/main/resources/templates/community/free-create.html
@@ -65,7 +65,7 @@
                                 <button class="choce1-btn" type="button">취소</button>
                             </div>
                             <div class="choce2">
-                                <button type="submit" class="choce2-btn">등록</button>
+                                <button type="button" class="choce2-btn">등록</button>
                             </div>
                         </div>
                     </div>
