--- a/src/main/resources/templates/community/review-board.html
+++ b/src/main/resources/templates/community/review-board.html
@@ -40,7 +40,7 @@
         </div>
         <main class="review-main">
             <div class="categori-container">
-                <div class="categori-wrapper">
+                <div class="categori-wrapper" style="visibility: hidden;">
                     <div class="categori-wrapper">
                         <label class="categori-label">
                             <span class="categori-new categori-content">최신글</span>
