--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -204,8 +204,8 @@
                                                             <div></div>
                                                             <div class="volunteer-link-wrapper">
                                                                 <div class="volunteer-image-wrapper freeBoardImg">
-                                                                    <!--<a th:href="@{/community/free-detail/{id}(id=${freeBoardList.id})}"></a>-->
-                                                                    <a th:href="@{/ready/}"></a>
+                                                                    <a th:href="@{/community/free-detail/{id}(id=${freeBoardList.id})}"></a>
+<!--                                                                    <a th:href="@{/community/free-board/${freeBoardList.id}}"></a>-->
                                                                     <!-- <div class="like-button-wrapper">
                                                                         <button  class="like-button" type="button">
                                                                             <span>좋아요</span>
