--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -21,7 +21,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script type="text/javascript">
     $('.home-button').click(function(){
-        window.location.href = '/main/main';
+        window.location.href = '/main/';
     });
 </script>
 </html>
