--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -12,8 +12,8 @@
 <body>
     <div class="full-screen">
         <div class="not-found-page">
-            <div class="error-number">4<div class="missing-zero"></div><div class="missing-zero"></div>3</div>
-            <div class="not-found-error-message">페이지를 찾을 수 없습니다</div>
+            <div class="error-number">4<div class="missing-zero"></div>3</div>
+            <div class="not-found-error-message">접근 권한이 없습니다.</div>
             <button type="button" class="home-button home-button-min">심봉사 홈으로 돌아가기</button>
         </div>
     </div>
@@ -21,7 +21,7 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script type="text/javascript">
     $('.home-button').click(function(){
-        window.location.href = '/main/main';
+        window.location.href = '/main/';
     });
 </script>
 </html>
