--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -176,7 +176,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <a href="/ready/"><div class="header-button">펀딩하기</div></a>
+<!--                        <a href="/ready/"><div class="header-button">펀딩하기</div></a>-->
                         <a href="/support/support-write"><div class="header-button">후원요청하기</div></a>
                         <!-- 로그인 상태-->
                         <th:block sec:authorize="isAuthenticated()">
@@ -222,7 +222,7 @@
                             <a href="/main/"><div class="category-wrapper category-select">홈</div></a>
                             <a href="/support/support-list"><div class="category-wrapper">후원</div></a>
                             <a href="/volunteer-work/work-list"><div class="category-wrapper">봉사</div></a>
-                            <a href="/ready"><div class="category-wrapper">펀딩</div></a>
+<!--                            <a href="/ready"><div class="category-wrapper">펀딩</div></a>-->
                             <a href="/community/free-board/new"><div class="category-wrapper">커뮤니티</div></a>
                             <a href="/welfare/center/"><div class="category-wrapper">복지센터</div></a>
                             <a href="/main/info"><div class="category-wrapper">심봉사소개</div></a>
