--- a/src/main/resources/templates/join-login/change-password.html
+++ b/src/main/resources/templates/join-login/change-password.html
@@ -40,7 +40,7 @@
                                 <span class="input-include-span">
                                     <input type="password" class="input-write" placeholder="변경할 비밀번호 확인">
                                     <input name="memberEmail" th:value="${memberEmail}" type="hidden" class="input-write">
-                                    <input name="randomKey" th:value="${rnadomKey}" type="hidden" class="input-write">
+                                    <input name="randomKey" th:value="${randomKey}" type="hidden" class="input-write">
                                 </span>
                             </div>
                             <div class="email-error"></div>
