aws 배포용 수정 pr

--- a/src/main/resources/static/css/join-login/email-login.css
+++ b/src/main/resources/static/css/join-login/email-login.css
@@ -529,7 +529,7 @@ input {
         right: 0px;
         width: 50%;
         height: 100%;
-        background-image: url(https://tumblbug-assets.s3.ap-northeast-1.amazonaws.com/static_assets/login/bg_login_email.jpg);
+        background-image: url(../../image/natural5.jpg);
         background-size: cover;
         background-position: center center;
     }
