--- a/src/main/resources/templates/join-login/join-select.html
+++ b/src/main/resources/templates/join-login/join-select.html
@@ -61,7 +61,7 @@
                         <div class="join-wrap">
                             이미 계정이 있으신가요?
                             <span class="join-text">
-                                <a href="/member/login" class="join-page">로그인</a>
+                                <a href="/member/login-select" class="join-page">로그인</a>
                             </span>
                         </div>
                     </div>
