--- a/src/main/resources/templates/mypage/my-support-list.html
+++ b/src/main/resources/templates/mypage/my-support-list.html
@@ -68,11 +68,11 @@
                             <a href="/mypage/my-support-list" class="header-menu-a-select">후원내역</a>
                         </div>
                     </span>
-                        <span class="header-menu-element">
-                        <div class="header-menu-div">
-                            <a href="/mypage/my-funding-list" class="header-menu-a">펀딩내역</a>
-                        </div>
-                    </span>
+<!--                        <span class="header-menu-element">-->
+<!--                        <div class="header-menu-div">-->
+<!--                            <a href="/mypage/my-funding-list" class="header-menu-a">펀딩내역</a>-->
+<!--                        </div>-->
+<!--                    </span>-->
                         <span class="header-menu-element">
                         <div class="header-menu-div">
                             <a href="/mypage/rice-list" class="header-menu-a">공양미 내역</a>
@@ -98,14 +98,14 @@
             <div class="support-request-wrap">
                 <div class="support-request-inner-wrap">
 
-                    <div class="my-board-header">
-                        <div class="my-board-header-container">
-                            <span class="my-board-header-title">후원</span>
-                            <a href="/mypage/my-support-list/funding">
-                                <span class="my-board-header-title-select">펀딩</span>
-                            </a>
-                        </div>
-                    </div>
+<!--                    <div class="my-board-header">-->
+<!--                        <div class="my-board-header-container">-->
+<!--                            <span class="my-board-header-title">후원</span>-->
+<!--                            <a href="/mypage/my-support-list/funding">-->
+<!--                                <span class="my-board-header-title-select">펀딩</span>-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
 <!--                    <div class="support-request-one-wrap">-->
 <!--                        <div class="support-request">-->
