--- a/src/main/resources/templates/mypage/rice-charge.html
+++ b/src/main/resources/templates/mypage/rice-charge.html
@@ -68,11 +68,11 @@
                             <a href="/mypage/my-support-list" class="header-menu-a">후원내역</a>
                         </div>
                     </span>
-                        <span class="header-menu-element">
-                        <div class="header-menu-div">
-                            <a href="/mypage/my-funding-list" class="header-menu-a">펀딩내역</a>
-                        </div>
-                    </span>
+<!--                        <span class="header-menu-element">-->
+<!--                        <div class="header-menu-div">-->
+<!--                            <a href="/mypage/my-funding-list" class="header-menu-a">펀딩내역</a>-->
+<!--                        </div>-->
+<!--                    </span>-->
                         <span class="header-menu-element">
                         <div class="header-menu-div">
                             <a href="/mypage/rice-list" class="header-menu-a">공양미 내역</a>
